src/main/java/com/example/sp/web/rest/errors/SPException.java
package com.example.sp.web.rest.errors;

public class SPException extends RuntimeException {
    public SPException(String message) {
        super(message);
    }
}
